--- a/broadband.html
+++ b/broadband.html
@@ -122,7 +122,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
  <br>
 		To get the costs down I <a href='https://smwk.github.io/freesat.html'>removed the TV package</a> and instead used a mix of satellite (Freesat) and arial (Saorview), which brought the monthly cost down to €64 a month for broadband only.<br>
     <br>
-    After a chance discussion with a colleague I heard that Three Mobile had a 5G broaband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
+    After a chance discussion with a colleague I heard that Three Mobile had a 5G broadband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
          <br>
 		I went for an 'expert' installation package so it would be mounted externally where I live. However as a test I plugged in the modem inside and found the speeds were as good as before, with download speeds of about 94Mbps, the same as with my previous broadband.<br>
 		<br>
