--- a/broadband.html
+++ b/broadband.html
@@ -128,7 +128,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<br>
 		While 94Mbps is fine for me it was still a bit strange the speed came in exatly the same as before, I eventually tracked this down to the cable used between the modem and my wireless router. I had used an old cable based purely on the colour so it could be easily distinguished, but it was still a surprise to find a Cat5 cable.<br>
 		<br>
-		When the installer arrived a few days later he checked for the local base station, I has assumed the closest was to the East but it turned out there was a new mast to the West only 140 meters away, though not quite line of sight. Rather than install the modem externally we instead moved it to a different part of the room.<br>
+		When the installer arrived a few days later he checked for the local base station, I had assumed the closest was to the East but it turned out there was a new mast to the West only 140 meters away, though not quite line of sight. Rather than install the modem externally we instead moved it to a different part of the room.<br>
 		<Br>
 		<img src=broadband04.png class=ImageMain>
 		<div class=ImageCaption>↑ Ping time of 48ms and download speed over 350Mbps. Teams calls need a ping time of around 100ms or less and so far I've not had any audio quality issues.<br></div>
