--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 		  <b>2024</b><br>
-     <a href="freesat.html" class=two>Installing FreeSat and Saorview</a><br>
+    <a href="bimi.html" class=two>Getting BIMI certified</a><br>
+    <a href="occam.html" class=two>Orbea Occam SL H30</a><br>
+    <a href="freesat.html" class=two>Installing FreeSat and Saorview</a><br>
     <a href="broadband.html" class=two>Changing broadband provider</a><br>
     <a href="DINtimer.html" class=two>Replacing a DIN timer on fuseboard</a><br>
     <a href="desktopNotifications.html" class=two>Outlook Desktop Notifications stop working</a><br>
@@ -114,7 +116,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
-		   
+	<tr><td><a href="bimi.html" class=two>Getting BIMI certified</a></td><td>19-Feb-24</td></tr>
+        <tr><td><a href="occam.html" class=two>Orbea Occam SL H30</a></td><td>19-Feb-24</td></tr>
 	<tr><td><a href="freesat.html" class=two><a href="freesat.html" class=two>Replacing Virgin Media with FreeSat and Saorview</a></td><td>08-Feb-24</td></tr>
 	<tr><td><a href="broadband.html" class=two>Changing broadband provider</a></td><td>08-Feb-24</td></tr>
 	<tr><td><a href="DINtimer.html" class=two>Replacing a DIN timer on fuseboard</a></td><td>08-Feb-24</td></tr>
