--- a/occam.html
+++ b/occam.html
@@ -58,7 +58,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.indexTable td { font-family:verdana; font-size:12px; color:#564c4d; }
 	.code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; padding:6px; }
 
-	    td:first-child {
+	   .table1 td:first-child {
   font-weight: bold;
 }
 	    
@@ -134,7 +134,7 @@ After 8 years with my Giant Talon 0 2016 it was finally time to upgrade my mount
 		<br>
           So how does my new bike match up against the old one?<br>
           <br>
-          <table style="font-family:verdana; font-size:12px; color:#564c4d;">
+          <table style="font-family:verdana; font-size:12px; color:#564c4d;" class=table1>
            <tr><td></td><td>Giant Talon 0 2016</td></td><td>Orbea Occam SL H30 2024</td></tr> 
             <tr><td>Cost</td><td>€1,550</td><td>€2,460</td></tr> 
            <tr><td>Wheels</td><td>27.5"</td><td>29"</td></tr> 
