--- a/occam.html
+++ b/occam.html
@@ -135,7 +135,7 @@ After 8 years with my Giant Talon 0 2016 it was finally time to upgrade my mount
           So how does my new bike match up against the old one?<br>
           <br>
           <table style="font-family:verdana; font-size:12px; color:#564c4d;" class=table1>
-           <tr><td></td><td>Giant Talon 0 2016</td></td><td>Orbea Occam SL H30 2024</td></tr> 
+           <tr><th></th><th>Giant Talon 0 2016</th><th>Orbea Occam SL H30 2024</th></tr> 
             <tr><td>Cost</td><td>€1,550</td><td>€2,460</td></tr> 
            <tr><td>Wheels</td><td>27.5"</td><td>29"</td></tr> 
             <tr><td>Tyres Front</td><td>Maxxis Icon 27.5x2.2"</td><td>Maxxis Dissector 2.40" 60 TPI 3CMaxxTerra Exo TLR</td></tr> 
