--- a/occam.html
+++ b/occam.html
@@ -136,7 +136,7 @@ After 8 years with my Giant Talon 0 2016 it was finally time to upgrade my mount
           <br>
           <table style="font-family:verdana; font-size:12px; color:#564c4d;" class=table1>
            <tr><th></th><th>Giant Talon 0 2016</th><th>Orbea Occam SL H30 2024</th></tr> 
-            <tr><td>Cost</td><td>€1,550</td><td>€2,460</td></tr> 
+            <tr><td>Cost</td><td>€1,550 (€1,840 adjusted to inflation)</td><td>€2,460</td></tr> 
            <tr><td>Wheels</td><td>27.5"</td><td>29"</td></tr> 
             <tr><td>Tyres Front</td><td>Maxxis Icon 27.5x2.2"</td><td>Maxxis Dissector 2.40" 60 TPI 3CMaxxTerra Exo TLR</td></tr> 
             <tr><td>Tyres Back</td><td>Maxxis Icon 27.5x2.2"</td><td>Maxxis Rekon 2.40" FB 60 TPI Dual Exo TR </td></tr> 
