--- a/occam.html
+++ b/occam.html
@@ -151,7 +151,7 @@ After 8 years with my Giant Talon 0 2016 it was finally time to upgrade my mount
             <tr><td>Handlebars</td><td>690mm</td><td>800mm</td></tr> 
             <tr><td>Dropper</td><td>-</td><td>Orbea OEM 31.6mm</td></tr> 
             <tr><td>Saddle</td><td>Giant OEM</td><td>Selle Royal 2058 DRN</td></tr> 
-            <tr><td>Weight</td><td>12.9KG</td><td>14.9KG</td></tr> 
+            <tr><td>Weight</td><td>12.9KG</td><td>14.8KG (without pedals)</td></tr> 
           </table>
 
           <br>
