--- a/bimi.html
+++ b/bimi.html
@@ -130,7 +130,7 @@ Over the last few years DMARC has been <a href='https://dmarc.org/stats/dmarc/'>
 <br>
 This is where an extension of DMARC can help: <a href='https://en.wikipedia.org/wiki/Brand_Indicators_for_Message_Identification'>Brand Indicators for Message Identification</a> or BIMI for short. This allows a company's logo to be displayed beside a received email.<br>
 		<br>
-          <img src=bimim01.png class=ImageMain>
+          <img src=bimi01.png class=ImageMain>
           <div class=ImageCaption>↑ In Gmail for Android we can see some companies have adopted this while others have not.</div>
 		<br>
 	As with DMARC the BIMI specification utilises DNS to allow mail admins to upload a SVG image to a we URL. Just getting the SVG can be difficult as programs like Photoshop will save the image as a JPEG within an SVG, where as the BIMI standard is looking for the image described in XML format.<br>
