--- a/DINtimer.html
+++ b/DINtimer.html
@@ -125,7 +125,7 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
 		<img src=DINtimer01.png class=ImageMain>
 		<div class=ImageCaption>↑ Smart Meter took about 30 minutes to install.</div>
         <br>
-        With a <a href='https://en.wikipedia.org/wiki/Russian_invasion_of_Ukraine'>madman</a> in the East the eletricity rates for the winter were at record levels:<br>
+        With a <a href='https://en.wikipedia.org/wiki/Russian_invasion_of_Ukraine'>madman</a> in the East the electricity rates for the winter were at record levels:<br>
           - Day rate (09:00 to 23:00) 0.416 /kWh<br>
           - Night rate (23:00 to 09:00) 0.205 /kWh<br>
           - Special night rate (02:00 to 04:00) 0.120 /kWh<br>
