--- a/DINtimer.html
+++ b/DINtimer.html
@@ -130,9 +130,9 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
           - Night rate (23:00 to 09:00) 0.205 /kWh<br>
           - Special night rate (02:00 to 04:00) 0.120 /kWh<br>
           <br>
-          Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation I don't actually mind having storage heaters as you can warm them up during night rates and they are non polluting.<br>
+          Most of my heating comes from 3 storage heaters, 2 of which also have a manual top up heating element, Dimplex xmc718n. Despite their reputation, I don't mind having storage heaters as you can warm them up during night rates and they are non-polluting.<br>
           <br>
-          My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in theory, in practice not so much. Even more so with an apartment with a BER rating of F.<br>
+          My main issue was the automatic timer that regulates when they come on, the Devireg 710-2. The idea behind this is the controller will detect when the night rate will start and base how long it runs on the outside temperature. Great in theory, but in practice not so much. Even more so with an apartment with a BER rating of F.<br>
           		<br>
 		<img src=DINtimer02.png class=ImageMain>
 		<div class=ImageCaption>↑ Devireg 710-2, commonly used in apartments.</div>
@@ -149,7 +149,7 @@ In November 2023 I finally got a Smart Meter installed by ESB Networks. This all
 		<img src=DINtimer04.png class=ImageMain>
 		<div class=ImageCaption>↑ Usage between 2AM and 4AM has increased.</div>
 		<br>
-		2 hours of heating between 2 and 4 AM comes in at about €1.60 versus about €2.90 on the standard night rate. There will be nights where the storage heaters needs more than 2 hours heating, but there will still be a saving of €1.30 a night.<br>
+		2 hours of heating between 2 and 4 AM comes in at about €1.60 versus about €2.90 on the standard night rate. There will be nights where the storage heaters need more than 2 hours of heating, but there will still be a saving of €1.30 a night.<br>
 		By running the storage heaters longer at night I should also use less of the manual heater during the day, so that should also save money in the long term.<br>
 		Electric Ireland will be dropping their prices in 2024, but it's likely the day rate will still be around 30c by the end of the year. Estimated savings would be about €250 a year.<br>
           <br>
