--- a/broadband.html
+++ b/broadband.html
@@ -120,17 +120,17 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>Changing Broadband Provider</div>
 	      <div class=datestamp>08-Feb-24</div>
         <div class=content><br>
-  Despite living in a city, up until recently I only had the possibility to get broadband over cable (Virgin Media) or DSL. This meant I was I was paying €76 per month for a TV and Broadband package from Virgin Media. At one point in the past it was up to €96 a month.<br>
+  Despite living in a city, up until recently I only had the possibility to get broadband over cable (Virgin Media) or DSL. This meant I was I was paying €76 per month for a TV and Broadband package from Virgin Media. At one point in the past, it was up to €96 a month.<br>
   <br>
   As I work from home a good internet connection was important, as well as good latency. DSL wasn't particularly fast or cheap and the phone line would need to be moved to make it useable, so I didn't go with that option.<br>
  <br>
-		To get the costs down I <a href='https://smwk.github.io/freesat.html'>removed the TV package</a> and instead used a mix of satellite (Freesat) and arial (Saorview), which brought the monthly cost down to €64 a month for broadband only.<br>
+		To get the costs down I <a href='https://smwk.github.io/freesat.html'>removed the TV package</a> and instead used a mix of satellite (Freesat) and arial (Saorview), which brought the monthly cost down to €64 a month for broadband-only.<br>
     <br>
-    After a chance discussion with a colleague I heard that Three Mobile had a 5G broadband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
+    After a chance discussion with a colleague, I heard that Three Mobile had a 5G broadband package going for €39 a month. I was a little sceptical on wireless broadband but it turned out I wasn't that far from the nearest 5G mast.<br>
          <br>
-		I went for an 'expert' installation package so it would be mounted externally where I live. However as a test I plugged in the modem inside and found the speeds were as good as before, with download speeds of about 94Mbps, the same as with my previous broadband.<br>
+		I went for an 'expert' installation package so it would be mounted externally where I live. However, as a test, I plugged in the modem inside and found the speeds were as good as before, with download speeds of about 94Mbps, the same as with my previous broadband.<br>
 		<br>
-		While 94Mbps is fine for me it was still a bit strange the speed came in exatly the same as before, I eventually tracked this down to the cable used between the modem and my wireless router. I had used an old cable based purely on the colour so it could be easily distinguished, but it was still a surprise to find a Cat5 cable.<br>
+		While 94Mbps is fine for me it was still a bit strange the speed came in the same as before, I eventually tracked this down to the cable used between the modem and my wireless router. I had used an old cable-based purely on the colour so it could be easily distinguished, but it was still a surprise to find a Cat5 cable.<br>
 		<br>
 		When the installer arrived a few days later he checked for the local base station, I had assumed the closest was to the East but it turned out there was a new mast to the West only 140 meters away, though not quite line of sight. Rather than install the modem externally we instead moved it to a different part of the room.<br>
 		<Br>
@@ -139,7 +139,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <br>
 
          <br>
-          The modem itself looks ok, has a much needed feature of being able to turn off the activity lights and is powered by POE. Possibly I could have just gone with the indoor self install version, but I didn't really know what type of connection I was going to get.<br>
+          The modem itself looks ok, has a much-needed feature of being able to turn off the activity lights, and is powered by POE. Possibly I could have just gone with the indoor self-install version, but I didn't know what type of connection I was going to get.<br>
       <br>
 		<img src=broadband01.png class=ImageMain>
 		<div class=ImageCaption>↑ Outdoor Modem - <a href='https://ztedevices.com/en-uk/mc7010/'>ZTE MC7010</a></div>
