--- a/freesat.html
+++ b/freesat.html
@@ -123,16 +123,16 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
   Last summer I decided I was paying too much for a TV and Broadband package from Virgin Media. Another 10% price increase meant I was due to pay €88 a month.<br>
           <br>
-          I couldn't change broadband provider at this time but I could ditch the TV package and get a combination of an arial for Saorview (Irish DTT) and the UK's FreeSat via a dish.<br>
+          I couldn't change broadband provider at this time but I could ditch the TV package and get a combination of an aerial for Saorview (Irish DTT) and the UK's FreeSat via a dish.<br>
           <br>
-          Based on reviews I went with <a href='https://www.satellite.ie/'>Satellite.ie</a> as the installer, for a one off payment of €278 you get the arial and dish installed and a combo receiver box.<br>
+          Based on reviews I went with <a href='https://www.satellite.ie/'>Satellite.ie</a> as the installer, for a one-off payment of €278 you get the aerial and dish installed and a combo receiver box.<br>
           <br>
-          My apartment has a flat roof that I have exclusive use of, so there were no issues over access. Before I moved in someone had a wireless broadband arial setup, so the installer just reused this pole and cable, which made for a neat job with no drilling.<br>
+          My apartment has a flat roof that I have exclusive use of, so there were no issues over access. Before I moved in someone had a wireless broadband aerial setup, so the installer just reused this pole and cable, which made for a neat job with no drilling.<br>
           <br>
           Compared to Virgin Media's offering overall I'm happy:<br>
           <br>
           <b>Pros</b><br>
-          - UTV is back, so this incudes some matches that don't get shown on Virgin Media One.<br>
+          - UTV is back, so this includes some matches that don't get shown on Virgin Media One.<br>
           - Things like the Tour de France on ITV4 are no longer blacked out. Their coverage is a lot better than TG4's offering.<br>
           - The box can easily record programs to a USB key.<br>
           - The receiver box is tiny so uses a lot less space than the Virgin Horizon box, also less noise and electricity used.<br>
@@ -145,7 +145,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<img src=freesat01.png class=ImageMain>
 		<div class=ImageCaption>↑ Supplied receiver <a href='https://www.amikostb.com/product/505-MiniCombo3'>Amiko Mini Combo 3</a>.</div>
 		<br>
-          So how much did I save? It's hard to say because Virgin Media give bundle deals, but probably it was about €30 a month for the TV package alone. This means the arial and satellite pays for itself in only 10 months.<br>
+          So how much did I save? It's hard to say because Virgin Media gives bundle deals, but probably it was about €30 a month for the TV package alone. This means the aerial and satellite pays for itself in only 10 months.<br>
 		
           <br>
           
