--- a/teamsApplication.html
+++ b/teamsApplication.html
@@ -117,7 +117,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
          <div class=headline>Teams PowerShell module cannot run CS commands as App</div>
 	      <div class=datestamp>19-Jan-24</div>
         <div class=content><br>
-   A request from our Telecoms team asked if we could sync the phone number of newly ported users from Teams to AD as part of a scheduled task. The command worked without issue with the Teams Admin role enabled but when running the command Get-CsOnlineUser as an Azure app we got the following error.
+   A request from our Telecoms team asked if we could sync the phone numbers of newly ported users from Teams to AD as part of a scheduled task. The command worked without issue with the Teams Admin role enabled but when running the command Get-CsOnlineUser as an Azure app we got the following error.
 <br>
 		<br>
 		<div class=code>Get-CsOnlineUser: Access Denied.</div>
