--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
-	<tr><td><a href="hve.html" class=two>Setting up Mail Relay with HVE</a><br></td><td>16-May-24</td></tr>tr>
+	<tr><td><a href="hve.html" class=two>Setting up Mail Relay with HVE</a><br></td><td>16-May-24</td></tr>
 	<tr><td><a href="bimi.html" class=two>Getting BIMI certified</a></td><td>19-Feb-24</td></tr>
         <tr><td><a href="occam.html" class=two>Orbea Occam SL H30</a></td><td>19-Feb-24</td></tr>
 	<tr><td><a href="freesat.html" class=two><a href="freesat.html" class=two>Replacing Virgin Media with FreeSat and Saorview</a></td><td>08-Feb-24</td></tr>
