--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 		  <b>2024</b><br>
+	  <a href="ADdelegate.html" class=two>Delegate Control in AD</a><br>
+	  <a href="hverelay.html" class=two>App mail relay via HVE</a><br>
  <a href="hve.html" class=two>Setting up Mail Relay with HVE</a><br>
     <a href="bimi.html" class=two>Getting BIMI certified</a><br>
     <a href="occam.html" class=two>Orbea Occam SL H30</a><br>
@@ -117,6 +119,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=headline>Articles</div>
 	      <table class=indexTable> 
 		      <br>
+	<tr><td><a href="ADdelegate.html" class=two>Delegate Control in AD</a><br></td><td>22-May-24</td></tr>
+	<tr><td><a href="hverelay.html" class=two>App mail relay via HVE</a><br></td><td>22-May-24</td></tr>
 	<tr><td><a href="hve.html" class=two>Setting up Mail Relay with HVE</a><br></td><td>16-May-24</td></tr>
 	<tr><td><a href="bimi.html" class=two>Getting BIMI certified</a></td><td>19-Feb-24</td></tr>
         <tr><td><a href="occam.html" class=two>Orbea Occam SL H30</a></td><td>19-Feb-24</td></tr>
