--- a/hverelay.html
+++ b/hverelay.html
@@ -131,7 +131,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
 Having recently setup Microsoft HVE for mail relay via client submission it was now time to update the settings on the approx. 40 apps that relay on my network.<br>
           <br>
-          To start with it's worth noting a few things with HVE. Currently it doesn't support OAuth, but will in September 2024 when it is fully released. It only supports TLS 1.2 and 1.3, so any apps that haven't been updated in a while may only support a lower version.<br>
+          To start with it's worth noting a few things with HVE. Currently, it doesn't support OAuth, but will in September 2024 when it is fully released. It only supports TLS 1.2 and 1.3, so any apps that haven't been updated in a while may only support a lower version.<br>
           <br>
 		<div class=code>
             Server/Endpoint: smtp-hve.office365.com<br>
@@ -143,16 +143,16 @@ Having recently setup Microsoft HVE for mail relay via client submission it was 
           </div>
           <br>
           
-I had already done some checks to verify that only a couple didn't support a username and password, but what I didn't realise is that's only half the story.<br>
+I had already done some checks to verify that only a couple didn't support a username and password, but what I didn't realize is that's only half the story.<br>
           <br>
-If an app defaults to to port 465 for SSL then it doesn't support client submission (port 587), this occurred on the first app I checked, Tree Size Pro.<br>
+If an app defaults to port 465 for SSL then it doesn't support client submission (port 587), this occurred on the first app I checked, Tree Size Pro.<br>
 <br>
           <img src="hverelay01.png" class="ImageMain">
-          <div class="ImageCaption">↑ TreeSize Pro default to port 465 for SSL, it does not support client submission.</div>
+          <div class="ImageCaption">↑ TreeSize Pro defaults to port 465 for SSL, it does not support client submission.</div>
 <br>
 From there it got even worse, apps that don't have a test button, apps that seem to have the correct settings but then give a basic error message without the needed detail to troubleshoot.<br>
 <br>
-On the server itself you also need to make sure that port 587 is not blocked by the Windows Firewall.<br>
+On the server itself, you also need to make sure that port 587 is not blocked by the Windows Firewall.<br>
           <br>
           The first app I did get to work was Nessus by Tenable.
           
