--- a/outlookFolders.html
+++ b/outlookFolders.html
@@ -75,6 +75,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content" style='line-height: 1.6;'>
 		  <b>2024</b><br>
+	    <a href="ADdelegate.html" class=two>Delegate Control in AD</a><br>
+	  <a href="hverelay.html" class=two>App mail relay via HVE</a><br>
+    <a href="hve.html" class=two>Setting up Mail Relay with HVE</a><br>
+	      <a href="bimi.html" class=two>Getting BIMI certified</a><br>
+    <a href="occam.html" class=two>Orbea Occam SL H30</a><br>
      <a href="freesat.html" class=two>Installing FreeSat and Saorview</a><br>
     <a href="broadband.html" class=two>Changing broadband provider</a><br>
     <a href="DINtimer.html" class=two>Replacing a DIN timer on fuseboard</a><br>
