--- a/hverelay.html
+++ b/hverelay.html
@@ -159,7 +159,9 @@ On the server itself, you also need to make sure that port 587 is not blocked by
           <img src="hverelay02.png" class="ImageMain">
           <div class="ImageCaption">↑ Lots of authentication methods with Nessus.</div>
 <br>
-          
+          <img src="hverelay03.png" class="ImageMain">
+          <div class="ImageCaption">↑ All apps should have a 'Send Test Email' button, but many don't.</div>
+<br>     
           <br>
           
 	<br>
