--- a/hverelay.html
+++ b/hverelay.html
@@ -174,6 +174,7 @@ On the server itself, you also need to make sure that port 587 is not blocked by
 		TBC
 		</div>
 	<br>
+		While I could ask the script owners to use <a href='https://smwk.github.io/graphMail.html'>Graph instead</a>, the above code is easier to edit.<br>
 	<br>
           </div>
           
